--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@ p{
   color: white
 }
 
+/* Style cursor color */
 .st-ck {
   caret-color: black;
 }
@@ -66,6 +67,7 @@ color: red;
 text-decoration: underline;
 }
 
+/* Design foorter */
 .footer {
 position: fixed;
 left: 0;
