--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 /* Change the sidebar color*/
 [data-testid=stSidebar] {
-  background-image: linear-gradient(#000395,#FFD4DD);
+  background-image: linear-gradient(#000395,hsl(347, 100%, 92%));
 }
 
 /* Style hyperlinks*/
